--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1499,148 +1499,71 @@ option {
 }
 
 /* price thumb */
-[slider] {
-  width: 300px;
+.range-slider {
+  height: 5px;
   position: relative;
-  height: 5px;
-  margin: 45px 0 10px 0;
+  background-color: #e1e9f6;
+  border-radius: 2px;
+}
+.range-selected {
+  height: 100%;
+  left: 30%;
+  right: 30%;
+  position: absolute;
+  border-radius: 5px;
+  background-color: #1b53c0;
 }
 
-[slider] > div {
-  position: absolute;
-  left: 13px;
-  right: 15px;
-  height: 5px;
+.range-input {
+  position: relative;
 }
-[slider] > div > [inverse-left] {
+.range-input input {
   position: absolute;
-  left: 0;
+  width: 100%;
   height: 5px;
-  border-radius: 10px;
-  background-color: #CCC;
-  margin: 0 7px;
-}
-
-[slider] > div > [inverse-right] {
-  position: absolute;
-  right: 0;
-  height: 5px;
-  border-radius: 10px;
-  background-color: #CCC;
-  margin: 0 7px;
-}
-
-
-[slider] > div > [range] {
-  position: absolute;
-  left: 0;
-  height: 5px;
-  border-radius: 14px;
-  background-color: #d02128;
-}
-
-/* заменить границы фильтра картинками */
-[slider] > div > [thumb] {
-  position: absolute;
   top: -7px;
-  z-index: 2;
-  height: 20px;
-  width: 20px;
-  text-align: left;
-  margin-left: -11px;
-  cursor: pointer;
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4);
-  background-color: #FFF;
-  border-radius: 50%;
-  outline: none;
-}
-
-[slider] > input[type=range] {
-  position: absolute;
+  background: none;
   pointer-events: none;
   -webkit-appearance: none;
-  z-index: 3;
-  height: 14px;
-  top: -2px;
-  width: 100%;
-  opacity: 0;
+  -moz-appearance: none;
 }
-
-/* div[slider] > input[type=range]:focus::-webkit-slider-runnable-track {
-  background: transparent;
-  border: transparent;
-}
-
-div[slider] > input[type=range]:focus {
-  outline: none;
-} */
-
-div[slider] > input[type=range]::-webkit-slider-thumb {
-  pointer-events: all;
-  width: 28px;
-  height: 28px;
-  border-radius: 0px;
-  border: 0 none;
-  background: red;
+.range-input input::-webkit-slider-thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 3px solid #1b53c0;
+  background-color: #fff;
+  pointer-events: auto;
   -webkit-appearance: none;
 }
-/* 
-div[slider] > input[type=range]::-ms-fill-lower {
-  background: transparent;
-  border: 0 none;
-} */
+.range-input input::-moz-range-thumb {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  border: 3px solid #1b53c0;
+  background-color: #fff;
+  pointer-events: auto;
+  -moz-appearance: none;
+}
 
-/* div[slider] > input[type=range]::-ms-fill-upper {
-  background: transparent;
-  border: 0 none;
-} */
+.range-price {
+    margin: 30px 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .range-price label {
+    margin-right: 5px;
+  }
+  .range-price input {
+    width: 40px;
+    padding: 5px;
+  }
+  .range-price input:first-of-type {
+    margin-right: 15px;
+  }
 
-/* div[slider] > input[type=range]::-ms-tooltip {
-  display: none;
-} */
-
-/* [slider] > div > [sign] {
-  opacity: 0;
-  position: absolute;
-  margin-left: -11px;
-  top: -39px;
-  z-index:3;
-  background-color: #d02128;
-  color: #fff;
-  width: 28px;
-  height: 28px;
-  border-radius: 28px;
-  -webkit-border-radius: 28px;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  text-align: center;
-} */
-
-
-
-/* [slider] > div > [sign]:after {
-  position: absolute;
-  content: '';
-  left: 0;
-  border-radius: 16px;
-  top: 19px;
-  border-left: 14px solid transparent;
-  border-right: 14px solid transparent;
-  border-top-width: 16px;
-  border-top-style: solid;
-  border-top-color: #d02128;
-} */
-
-/* [slider] > div > [sign] > span {
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 28px;
-} */
-
-/* [slider]:hover > div > [sign] {
-  opacity: 1;
-} */
 
 /* Fat-content: */
 .fat-content-container {
