--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1441,7 +1441,7 @@ a:active {
   line-height: 16px;
 }
 
-.header-sorting-style{
+.header-sorting-style {
   margin: 0;
   margin-left: 16px;
 }
@@ -1499,82 +1499,83 @@ option {
 
 .price-filter {
   background: rgba(255, 255, 255, 0.2);
-  /* border-radius: 40px; */
+    padding: 16px 21px;
+  border-radius: 40px;
 }
 
-/* price slider */
 .range-slider {
-  height: 5px;
+  height: 4px;
   position: relative;
-  background-color: #e1e9f6;
-  border-radius: 2px;
+  background-color: rgba(248, 247, 244, 0.5);
 }
+
 .range-selected {
   height: 100%;
   left: 30%;
   right: 30%;
   position: absolute;
-  border-radius: 5px;
-  background-color: #1b53c0;
+  background-color: #f8f7f4;
 }
 
 .range-input {
   position: relative;
+
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 40px;
 }
+
 .range-input input {
   position: absolute;
   width: 100%;
-  height: 5px;
-  top: -7px;
+  height: 4px;
+  top: -4px;
+  border: none;
   background: none;
   pointer-events: none;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
+
 .range-input input::-webkit-slider-thumb {
   height: 20px;
   width: 20px;
-  border-radius: 50%;
-  border: 3px solid #1b53c0;
-  background-color: #fff;
+
+  background-image: url("/IMG/filter-button.svg");
   pointer-events: auto;
   -webkit-appearance: none;
 }
+
 .range-input input::-moz-range-thumb {
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  border: 3px solid #1b53c0;
-  background-color: #fff;
+  height: 20px;
+  width: 20px;
+  background-image: url("/IMG/filter-button.svg");
+
   pointer-events: auto;
   -moz-appearance: none;
 }
 
 .range-price {
-  margin: 0 0 30px;
+  margin: 0 0 7px;
   width: 100%;
+  min-width: 218px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.price-header{
+.price-header {
   margin: 0;
 }
-/* .range-price label {
-    margin-right: 5px;
-  } */
+
 .range-price input {
-  width: 40px;
-  /* padding: 5px; */
+  width: 100%;
+  max-width: 39px;
 }
 .range-price input:first-of-type {
-  /* margin-right: 15px; */
 }
 
 .input-range-min {
   all: unset;
-  
 }
 
 .input-range-max {
@@ -1583,9 +1584,11 @@ option {
 
 .input-range-min,
 .input-range-max {
+  width: 100%;
+  min-width: 4px;
+
   margin: 0;
   padding: 0;
-  /* margin-left: 16px; */
 
   font-weight: 500;
   font-size: 14px;
