--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1485,21 +1485,28 @@ option {
 
 /* Price: */
 .price-filter-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 
 .range-price {
   display: flex;
-  margin: 0;
+  margin: 0 0 7px;
+  width: 100%;
+  min-width: 218px;
+  max-height: 16px;
 
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   align-items: center;
+  justify-content: center;
 }
 
 .price-filter {
   background: rgba(255, 255, 255, 0.2);
-    padding: 16px 21px;
+  padding: 16px 21px;
   border-radius: 40px;
 }
 
@@ -1554,24 +1561,8 @@ option {
   -moz-appearance: none;
 }
 
-.range-price {
-  margin: 0 0 7px;
-  width: 100%;
-  min-width: 218px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .price-header {
   margin: 0;
-}
-
-.range-price input {
-  width: 100%;
-  max-width: 39px;
-}
-.range-price input:first-of-type {
 }
 
 .input-range-min {
@@ -1582,17 +1573,21 @@ option {
   all: unset;
 }
 
+/* !прыгает инпут */
 .input-range-min,
 .input-range-max {
-  width: 100%;
-  min-width: 4px;
-
-  margin: 0;
-  padding: 0;
+  width: 35px;
 
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
+}
+
+.input-range-min:hover,
+.input-range-min:focus,
+.input-range-min:active {
+  /* width: 30px; */
+
 }
 
 /* Fat-content: */
@@ -1603,7 +1598,7 @@ option {
 
 .fat-content {
   display: flex;
-  gap: 0px;
+  /* gap: 0px; */
 
   font-weight: 500;
   font-size: 16px;
