Updated cards of catalog

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,9 +37,9 @@ html {
 }
 
 body {
-  min-width: 960px;
-  max-width: 1200px;
-  /* width: 1200px; */
+  /* min-width: 960px;
+  min-width: 1200px; */
+  width: 1200px;
   margin: 0 auto;
   padding: 0;
 
@@ -611,6 +611,7 @@ a:active {
 .tastes-creamy:hover,
 .tastes-creamy:focus,
 .tastes-creamy:active {
+  min-width: 293px;
   min-height: 408px;
   justify-content: space-between;
 }
@@ -619,6 +620,7 @@ a:active {
 .tastes-item:focus,
 .tastes-item:active {
   min-width: 293px;
+  min-height: 408px;
 
   background: rgba(248, 247, 244, 0.2);
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
@@ -641,11 +643,6 @@ a:active {
 .tastes-item:focus .ice-cream-name,
 .tastes-item:active .ice-cream-name {
   color: #ffbc9e;
-}
-
-.ice-cream-name:hover,
-.ice-cream-name:focus,
-.ice-cream-name:active {
   cursor: pointer;
 }
 
@@ -690,7 +687,7 @@ a:active {
   display: flex;
   position: relative;
   bottom: 3px;
-  width: 267px;
+  max-width: 267px;
 
   font-weight: 500;
   font-size: 16px;
