--- a/CSS/style.css
+++ b/CSS/style.css
@@ -341,6 +341,8 @@ a:active {
 }
 
 .filled-basket {
+  position: relative;
+
   color: #323232;
   background: #f7f6f3;
   box-shadow: none;
@@ -1114,7 +1116,6 @@ a:active {
 /* Hidden */
 .modal {
   position: fixed;
-  border-radius: 5px;
   background: #f8f7f4;
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
   color: #323232;
@@ -1888,11 +1889,16 @@ option {
 }
 
 /* Full backet window */
+
+.basket-button-container{
+position: relative;
+}
+
 .popup-filled-basket {
   /* width: 540px; */
-  position: fixed;
-  top: 50px;
-  left: 20%;
+  position: absolute;
+ top: 36px;
+  right: 0;
   z-index: 3;
   display: none;
   
