--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1783,11 +1783,10 @@ option {
 
 /* Ice-cream cards: */
 
-/* ! 1)убрать выделение с первой кнопки при включении другой(возможно, использовать radiobutton?)
-   ! 2) убрать разъезжание кнопок при наведении(круглое выделение сделать отдельным div, вывести назад и сделать его absolute?) */
 /* Page numbers: */
 .page-numbers {
-  margin-top: 75px;
+  margin-top: 79px;
+  margin-right: 26px;
 
   font-weight: 500;
   font-size: 16px;
@@ -1808,7 +1807,13 @@ option {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* z-index: 2; */
+  z-index: 2;
+}
+
+.num-button a {
+  all: inherit;
+  z-index: 2;
+  cursor: pointer;
 }
 
 .selected-num-button {
@@ -1831,44 +1836,18 @@ option {
   cursor: pointer;
 }
 
+.num-button:active a {
+  color: #353535;
+}
+
 .list-numbers li:nth-child(2) {
   color: #353535;
 }
 
-/* .list-numbers a:hover,
-.list-numbers a:focus {
+.list-numbers li:nth-child(2) .selected-num-button {
   display: flex;
-  width: 26px;
-  height: 26px;
-
-  background: rgba(255, 255, 255, 0.2);
-  color: #ffffff;
-  border-radius: 50px;
-  align-items: center;
-  justify-content: center;
+  cursor: pointer;
 }
-
-.list-numbers a:active {
-  display: flex;
-  width: 26px;
-  height: 26px;
-  border-radius: 50px;
-  color: #353535;
-  background: #ffffff;
-  align-items: center;
-  justify-content: center;
-} */
-
-/* .page-1-button {
-  display: flex;
-  width: 26px;
-  height: 26px;
-  border-radius: 50px;
-  color: #353535;
-  background: #ffffff;
-  align-items: center;
-  justify-content: center;
-} */
 
 .list-numbers button {
   all: unset;
@@ -1877,30 +1856,43 @@ option {
 #left-arrow-button {
   opacity: 0.5;
   transform: rotate(-180deg);
+
+  margin-bottom: -1px; 
+  margin-right: 2px;
+}
+
+a.disabled {
+  pointer-events: none;
 }
 
 #right-arrow-button path {
   fill: #ffffff;
 }
 
+#right-arrow-button{
+   margin-bottom: -1px; 
+  margin-left: 5px;
+}
+
 .split-line {
   opacity: 0.3;
+  margin: 32px 26px 0;
 }
 
 /* Full backet window */
 
-.basket-button-container{
-position: relative;
+.basket-button-container {
+  position: relative;
 }
 
 .popup-filled-basket {
   /* width: 540px; */
   position: absolute;
- top: 36px;
+  top: 36px;
   right: 0;
   z-index: 3;
   display: none;
-  
+
   padding: 20px 16px 22px 15px;
 }
 
@@ -1933,7 +1925,10 @@ position: relative;
   padding-left: 1px;
 }
 
-.delete-product-button {
+.delete-product-button,
+.delete-product-button:hover,
+.delete-product-button:focus,
+.delete-product-button:active{
   all: unset;
 }
 
